trying to fix left align

--- a/plone/147-asi/css/sam_styles.css
+++ b/plone/147-asi/css/sam_styles.css
@@ -9,6 +9,6 @@
 	text-align: left;
 }
 
-.event_table th {
+table.vertical th {
 	text-align: left;
 }
